--- a/pricing.html
+++ b/pricing.html
@@ -55,7 +55,7 @@
         <div class="row align-items-center">
 
           <div class="col-6 col-lg-2">
-            <a href="index" class="mb-0">
+            <a href="index.html" class="mb-0">
               <img class="site-logo">
             </a>
           </div>
@@ -64,21 +64,21 @@
             <nav class="site-navigation position-relative text-right" role="navigation">
 
               <ul class="site-menu main-menu js-clone-nav mr-auto d-none d-lg-block">
-                <li><a href="index" class="nav-link">Home</a></li>
+                <li><a href="index.html" class="nav-link">Home</a></li>
                 <li><a href="index.html#features" class="nav-link">Features</a></li>
-                <li class="active"><a href="pricing" class="nav-link">Pricing</a></li>
-                <!--<li><a href="approch" class="nav-link">Approach</a></li>-->
+                <li class="active"><a href="pricing.html" class="nav-link">Pricing</a></li>
+                <!--<li><a href="approch.html" class="nav-link">Approach</a></li>-->
 
                 <!--<li class="has-children">-->
-                <li><a href="blog" class="nav-link">Blog</a></li>
+                <li><a href="blog.html" class="nav-link">Blog</a></li>
                   <!--<ul class="dropdown">
-                    <li><a href="blog" class="nav-link">Blog</a></li>
-                    <li><a href="blog-single" class="nav-link">Blog Sigle</a></li>
+                    <li><a href="blog.html" class="nav-link">Blog</a></li>
+                    <li><a href="blog-single.html" class="nav-link">Blog Sigle</a></li>
                   </ul>-->
                 </li>
                 
                 <li><a href="index.html#qr-code" class="btn btn-outline-white free-download">Free Download</a></li>
-                <!--<li><a href="contact" class="nav-link">Contact</a></li>-->
+                <!--<li><a href="contact.html" class="nav-link">Contact</a></li>-->
               </ul>
             </nav>
           </div>
@@ -400,17 +400,17 @@
               <div class="col-md-4 mb-4 mb-md-0">
                 <h3>Navigation</h3>
                 <ul class="list-unstyled">
-                  <li><a href="pricing">Pricing</a></li>
+                  <li><a href="pricing.html">Pricing</a></li>
                   <li><a href="index.html#features">Features</a></li>
-                  <li><a href="blog">Blog</a></li>
+                  <li><a href="blog.html">Blog</a></li>
                   <!--<li><a href="#">Contact</a></li>-->
                 </ul>
               </div>
               <div class="col-md-4 mb-4 mb-md-0">
                 <h3>Services</h3>
                 <ul class="list-unstyled">
-                  <li><a href="team">About Us</a></li>
-                  <li><a href="contact">Contact Us</a></li>
+                  <li><a href="team.html">About Us</a></li>
+                  <li><a href="contact.html">Contact Us</a></li>
                 </ul>
               </div>
               <div class="col-md-4 mb-4 mb-md-0">
