--- a/approch.html
+++ b/approch.html
@@ -64,20 +64,20 @@
             <nav class="site-navigation position-relative text-right" role="navigation">
 
               <ul class="site-menu main-menu js-clone-nav mr-auto d-none d-lg-block">
-                <li><a href="index.html" class="nav-link">Home</a></li>
-                <li><a href="index.html#features" class="nav-link">Features</a></li>
-                <li><a href="pricing.html" class="nav-link">Pricing</a></li>
-                <li class="active"><a href="approch.html" class="nav-link">Approach</a></li>
+                <li><a href="/" class="nav-link">Home</a></li>
+                <li><a href="/#features" class="nav-link">Features</a></li>
+                <li><a href="pricing" class="nav-link">Pricing</a></li>
+                <li class="active"><a href="approch" class="nav-link">Approach</a></li>
 
                 <!--<li class="has-children">-->
-                <li><a href="blog.html" class="nav-link">Blog</a></li>
+                <li><a href="blog" class="nav-link">Blog</a></li>
                   <!--<ul class="dropdown">
                     <li><a href="blog.html" class="nav-link">Blog</a></li>
                     <li><a href="blog-single.html" class="nav-link">Blog Sigle</a></li>
                   </ul>-->
                 </li>
                 
-                <li><a href="index.html#qr-code" class="btn btn-outline-white free-download">Free Download</a></li>
+                <li><a href="/#qr-code" class="btn btn-outline-white free-download">Free Download</a></li>
                 <!--<li><a href="contact.html" class="nav-link">Contact</a></li>-->
               </ul>
             </nav>
