--- a/approch.html
+++ b/approch.html
@@ -72,7 +72,7 @@
                 <!--<li class="has-children">-->
                 <li><a href="blog" class="nav-link">Blog</a></li>
                   <!--<ul class="dropdown">
-                    <li><a href="blog.html" class="nav-link">Blog</a></li>
+                    <li><a href="blog" class="nav-link">Blog</a></li>
                     <li><a href="blog-single.html" class="nav-link">Blog Sigle</a></li>
                   </ul>-->
                 </li>
@@ -197,7 +197,7 @@
                 <ul class="list-unstyled">
                   <li><a href="pricing.html">Pricing</a></li>
                   <li><a href="index.html#features">Features</a></li>
-                  <li><a href="blog.html">Blog</a></li>
+                  <li><a href="blog">Blog</a></li>
                   <!--<li><a href="#">Contact</a></li>-->
                 </ul>
               </div>
