--- a/blog-single-5.html
+++ b/blog-single-5.html
@@ -70,9 +70,9 @@
                 <!--<li><a href="approch.html" class="nav-link">Approach</a></li>-->
 
                 <!--<li class="has-children">-->
-                <li class="active"><a href="blog.html" class="nav-link">Blog</a>
+                <li class="active"><a href="blog" class="nav-link">Blog</a>
                   <!--<ul class="dropdown">
-                    <li><a href="blog.html" class="nav-link">Blog</a></li>
+                    <li><a href="blog" class="nav-link">Blog</a></li>
                     <li><a href="blog-single.html" class="nav-link">Blog Sigle</a></li>
                   </ul>-->
                 </li>
@@ -262,7 +262,7 @@
                 <ul class="list-unstyled">
                   <li><a href="pricing.html">Pricing</a></li>
                   <li><a href="index.html#features">Features</a></li>
-                  <li><a href="blog.html">Blog</a></li>
+                  <li><a href="blog">Blog</a></li>
                   <!--<li><a href="#">Contact</a></li>-->
                 </ul>
               </div>
