--- a/features.html
+++ b/features.html
@@ -65,9 +65,9 @@
                 <li><a href="pricing.html" class="nav-link">Pricing</a></li>
                 
                 <li class="has-children">
-                  <a href="blog.html" class="nav-link">Blog</a>
+                  <a href="blog" class="nav-link">Blog</a>
                   <ul class="dropdown">
-                    <li><a href="blog.html" class="nav-link">Blog</a></li>
+                    <li><a href="blog" class="nav-link">Blog</a></li>
                     <li><a href="blog-single.html" class="nav-link">Blog Sigle</a></li>
                   </ul>
                 </li>
