--- a/index.html
+++ b/index.html
@@ -553,7 +553,7 @@
                 <h3>Navigation</h3>
                 <ul class="list-unstyled">
                   <li><a href="pricing">Pricing</a></li>
-                  <li><a href="index.html#features">Features</a></li>
+                  <li><a href="/#features">Features</a></li>
                   <li><a href="blog">Blog</a></li>
                   <!--<li><a href="#">Contact</a></li>-->
                 </ul>
