--- a/team.html
+++ b/team.html
@@ -65,7 +65,7 @@
 
               <ul class="site-menu main-menu js-clone-nav mr-auto d-none d-lg-block">
                 <li><a href="index.html" class="nav-link">Home</a></li>
-                <li><a href="index.html#features" class="nav-link">Features</a></li>
+                <li><a href="/#features" class="nav-link">Features</a></li>
                 <li><a href="pricing" class="nav-link">Pricing</a></li>
                 <!--<li><a href="approch.html" class="nav-link">Approach</a></li>-->
 
@@ -268,7 +268,7 @@
                 <h3>Navigation</h3>
                 <ul class="list-unstyled">
                   <li><a href="pricing">Pricing</a></li>
-                  <li><a href="index.html#features">Features</a></li>
+                  <li><a href="/#features">Features</a></li>
                   <li><a href="blog">Blog</a></li>
                   <!--<li><a href="#">Contact</a></li>-->
                 </ul>
