--- a/blog-single-2.html
+++ b/blog-single-2.html
@@ -77,7 +77,7 @@
                   </ul>-->
                 </li>
 
-                <li><a href="index.html#qr-code" class="btn btn-outline-white free-download">Free Download</a></li>
+                <li><a href="/#qr-code" class="btn btn-outline-white free-download">Free Download</a></li>
                 <!--<li><a href="contact.html" class="nav-link">Contact</a></li>-->
               </ul>
             </nav>
