--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                   </ul>-->
                 </li>
 
-                <li><a href="index.html#qr-code" class="btn btn-outline-white free-download">Free Download</a></li>
+                <li><a href="/#qr-code" class="btn btn-outline-white free-download">Free Download</a></li>
                 <!--<li><a href="contact.html" class="nav-link">Contact</a></li>-->
               </ul>
             </nav>
@@ -123,7 +123,7 @@
                     Everywhere</h1>
                   <p class="mb-5" data-aos="fade-right" data-aos-delay="100">Your All-in-One Solution for Earning,
                     Managing, and Connecting</p>
-                  <p data-aos="fade-right" data-aos-delay="200" data-aos-offset="-500"><a href="index.html#qr-code"
+                  <p data-aos="fade-right" data-aos-delay="200" data-aos-offset="-500"><a href="/#qr-code"
                       class="btn btn-outline-white">Free Download</a></p>
                 </div>
                 <div class="col-lg-5 iphone-wrap">
