--- a/pricing.html
+++ b/pricing.html
@@ -55,7 +55,7 @@
         <div class="row align-items-center">
 
           <div class="col-6 col-lg-2">
-            <a href="index.html" class="mb-0">
+            <a href="/" class="mb-0">
               <img class="site-logo">
             </a>
           </div>
@@ -64,7 +64,7 @@
             <nav class="site-navigation position-relative text-right" role="navigation">
 
               <ul class="site-menu main-menu js-clone-nav mr-auto d-none d-lg-block">
-                <li><a href="index.html" class="nav-link">Home</a></li>
+                <li><a href="/" class="nav-link">Home</a></li>
                 <li><a href="/#features" class="nav-link">Features</a></li>
                 <li class="active"><a href="pricing" class="nav-link">Pricing</a></li>
                 <!--<li><a href="approch.html" class="nav-link">Approach</a></li>-->
