--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
                 </li>
 
                 <li><a href="/#qr-code" class="btn btn-outline-white free-download">Free Download</a></li>
-                <!--<li><a href="contact.html" class="nav-link">Contact</a></li>-->
+                <!--<li><a href="contact" class="nav-link">Contact</a></li>-->
               </ul>
             </nav>
           </div>
@@ -561,8 +561,8 @@
               <div class="col-md-4 mb-4 mb-md-0">
                 <h3>Services</h3>
                 <ul class="list-unstyled">
-                  <li><a href="team.html">About Us</a></li>
-                  <li><a href="contact.html">Contact Us</a></li>
+                  <li><a href="team">About Us</a></li>
+                  <li><a href="contact">Contact Us</a></li>
                 </ul>
               </div>
               <div class="col-md-4 mb-4 mb-md-0">
